# .github

./: .gitignore  README.md
contracts/: Anchor.toml  package-lock.json  package.json
contracts/.cargo/: config.toml
contracts/idl/: degen_id.json
contracts/programs/degen_id/: Cargo.toml
contracts/programs/degen_id/src/: lib.rs
contracts/tests/: degen_id.ts
profile/: README.md
