[package]
name = "degen_id"
version = "0.1.0"
description = "Degen Id — soulbound on-chain identity card, $DIDID hold-gated"
edition = "2021"
# Solana platform-tools ship rustc 1.84; the MSRV-aware resolver (below) uses
# this to avoid deps that require a newer compiler / edition2024.
rust-version = "1.84"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_id"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
